add facade service tests